2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/43_MethodInMain.deca
// Description:
//    Programme definition d'une methode dans un classe
// Resultats:
//      Programme incorrecte syntaxiquement :9:12: missing ';' at '('
// Historique:
//    cree le 19/01/2023
{
    int x;
    int getX(){
        return x;
    }
}